tests/language/test_runner/impl/part.dart
part of '../part_failure_test.dart';

class A
//    ^
// [analyzer] SYNTACTIC_ERROR.EXPECTED_BODY
// [cfe] A class declaration must have a body, even if it is empty.
